# src/payment/dto/create-payment-response.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from '@nestjs/swagger'
+import { PaymentObjectDto } from './payment-object.dto'
+
+export class CreatePaymentResponseDto {
+  @ApiProperty({
+    type: PaymentObjectDto,
+    description: 'Объект платежа от YooKassa'
+  })
+  payment: PaymentObjectDto
+}
